refactor(sharedPrompts): action taxonomy group-first architecture
- Introduce ActionGroup as capability-family layer; ActionType as executable leaf
- Add catalog/, registry/, resolver/, metadata/ packages; remove ActionTypeCatalog, CanonicalActionId, ActionToCanonicalMapping
- Enforce group-first semantic profiles: CategorySemanticProfileRegistry requires CanonicalActionRegistry + ActionTypeRegistry; compatible actions derived from groups
- Wire profile registry via ResolutionConfig; remove @Component from DefaultCategorySemanticProfileRegistry
- Add Action Taxonomy Architecture doc and refactor report; remove canonical-action-registry-design.md
- Add ActionTaxonomyGuardrailTest: noDuplicateStableKeys, profileCompatibilityIsGroupFirst, deprecatedActionsRemainTraceable
- Update all ActionType enums with getActionGroup(); serializers, EnumResolver, validation/recommendation unchanged in contract
- Stable-key compatibility preserved; deprecated actions (e.g. TEXT_MESSAGE, CREATIVE_WRITING_GEN) remain traceable

Made-with: Cursor